--- a/App.Entities/App.Entities.csproj
+++ b/App.Entities/App.Entities.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\App.Core\App.Core.csproj" />
+  </ItemGroup>
+
 </Project>
