--- a/approje/approje.csproj
+++ b/approje/approje.csproj
@@ -536,6 +536,8 @@
     <None Include="wwwroot\assets\js\selectize.min.js" />
     <None Include="wwwroot\assets\js\simplebar.min.js" />
     <None Include="wwwroot\assets\js\wow.min.js" />
+    <None Include="wwwroot\MyJs\signalr\dist\browser\signalr.js" />
+    <None Include="wwwroot\MyJs\signalr\dist\browser\signalr.min.js" />
   </ItemGroup>
 
   <ItemGroup>
