--- a/approje/approje.csproj
+++ b/approje/approje.csproj
@@ -277,6 +277,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Dtos\FriendRequestAndMeDto.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="Views\Shared\Error.cshtml" />
     <None Include="Views\Shared\_Layout.cshtml" />
     <None Include="wwwroot\assets\css\animate.min.css" />
